# TenThreeGUI

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  test_module.py
glad/: glad.c  glad.h
src/: application.cpp  application.hpp  component.cpp  component.hpp  frame.cpp  frame.hpp  module.cpp  module.hpp  renderer.cpp  renderer.hpp
src/assets/: color.hpp  image.hpp
src/components/: panel.cpp  panel.hpp
src/maths/: matrix.hpp  vector.hpp
